Update index.html to AU

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <header class="flex justify-between items-center px-10 py-6 mt-16">
       <img src="./images/logo.svg" alt="Tesla" width="120" height="24" />
       <button>
-        <i class="fa-solid fa-globe"></i> <span class="font-bold">US</span>
+        <i class="fa-solid fa-globe"></i> <span class="font-bold">AU</span>
       </button>
     </header>
 
