--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Top Bar -->
     <div id="top-bar" class="bg-gray-100 fixed top-0 right-0 left-0 py-2">
       <p class="text-center py-2 font-semibold">
-        0% APR available for qualified buyers
+        0% comparison rate available for qualified buyers
       </p>
     </div>
 
